--- a/ui/website/src/blockTemplate/Aboutufounder/Aboutufounder.css
+++ b/ui/website/src/blockTemplate/Aboutufounder/Aboutufounder.css
@@ -35,6 +35,15 @@
       height: 1400px ! important;
     }
    }
+    @media only screen and (device-width : 2560px) and (device-height : 1600px) {
+    .backgrd_curve1{
+      height: 820px ! important;
+    }
+    .DirectorText {
+      padding-top: 61px ! important;
+      padding-right: 167px ! important;
+     }
+  } 
 /*.director_imgDiv img{
 	width: 370px;
     height: 370px;
