--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -1282,6 +1282,66 @@
     left:13em ! important;
   }
 }
+@media only screen 
+  and (device-width: 2560px) 
+  and (device-height:1600px ) 
+ {
+    #consultdown_img1{
+     left: 90em ! important;
+    }
+     #consultdown_img3{
+     left: 90em ! important;
+    }
+     #consultdown_img5{
+     left: 90em ! important;
+    }
+    .new_wizardNotefor4 {
+    right: -122px ! important;
+    }
+    #consultdown_img0 {
+    left: 63em ! important;
+   }
+   #consultdown_img2 {
+    left: 63em ! important;
+   }
+   #consultdown_img4 {
+    left: 63em ! important;
+   }
+   #consultdown_img6 {
+    left: 63em ! important;
+   }
+   #consultdown_data1 {
+    left: 20% ! important;
+    width: 690px ! important;
+  }
+   #consultdown_data3 {
+    left: 20% ! important;
+    width: 690px ! important;
+  }
+   #consultdown_data5 {
+    left: 20% ! important;
+     width: 690px ! important;
+  }
+  #consultdown_data0{
+    right: 23% ! important;
+    width: 690px ! important;
+    }
+    #consultdown_data2{
+    right: 23% ! important;
+    width: 690px ! important;
+    }
+    #consultdown_data4{
+    right: 23% ! important;
+    width: 690px ! important;
+    }
+    #consultdown_data6{
+    right: 23% ! important;
+    width: 690px ! important;
+    }
+    .downimgtext {
+        left: 38em !important;
+    }
+  }
 
 
  
