--- a/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
+++ b/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
@@ -22,7 +22,21 @@
         /*object-fit: contain;*/
 	 }
 
-}	 
+}	
+@media only screen and (device-width : 412px) and (device-height : 732px) {
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+} 
+@media only screen and (device-width : 412px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+} 
 @media only screen and (device-width : 393px) and (device-height : 851px) {
 	.services_img{
 	     width: 100% ! important ;
@@ -178,4 +192,14 @@
   }
  }	
 
+ @media only screen and (device-width : 2560px) and (device-height : 1600px) {
+ 	.commonBlockpadd{
+		padding-left: 250px ! important; 
+ 	 }
+ 	.newcard_HD {
+	    width: 376px ! important;
+	    margin-left: 95px ! important; 
+	   } 
+
+ }
 
