--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -433,6 +433,12 @@
     .pt20{
       padding-top: 20px ! important;
     }
+    .iogimg_4 img{
+      width: 96.3%;
+    }
+    .iogimgblock2 img{
+      height: 123%;
+    }
     .blogtext p{
       height: 185px ! important;
     }
@@ -624,6 +630,52 @@
     .iogblock4text{
       padding-top: 145px ! important;
     }
+    
+
+  } 
+  @media only screen 
+  and (device-width: 2560px) 
+  and (device-height: 1600px) 
+ {
+   
+    .CareerBlockHighDef {
+      right: 134px ! important;
+      width: 671px ! important;
+    }
+    .iogblock2text{
+      padding-top: 355px ! important;
+    }
+    .ht_top{
+      margin-top: 130px ! important;
+    }
+    .iogimgblock2 {
+      height: 1156px ! important;
+    }
+    .iogimgblock2{
+      margin-left: -56px ! important;
+    }
+    .iogblock3text{
+      width: 803px ! important;
+      height: 690px ! important;
+      /*margin-left: 62px ! important;*/
+    }
+    .iogimgblock3 {
+        width: 798px ! important;
+    }
+    .iogimg_4 img{
+      width: 99.3% ! important;
+    }
+    .iogblock4text{
+      padding-top: 145px ! important;
+    }
+    .iogimg_4 {
+     width: 1490px ! important;
+     /*margin-top: 186px;*/
+   }
+   .iogblock4text {
+    padding-top: 254px ! important;
+  }
+
     
 
   } 
