--- a/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
+++ b/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
@@ -22,6 +22,13 @@
         /*object-fit: contain;*/
 	 }
 
+}
+@media only screen and (device-width : 400px)and (device-height : 640px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
 }	
 @media only screen and (device-width : 412px) and (device-height : 732px) {
 	.img1 img{
