--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -744,6 +744,18 @@
   #consultdown_data0{
     width: 280px ! important;
   }
+   #consultdown_data3{
+    width: 280px ! important;
+  }
+   #consultdown_data4{
+    width: 280px ! important;
+  }
+   #consultdown_data5{
+    width: 280px ! important;
+  }
+   #consultdown_data6{
+    width: 280px ! important;
+  }
   #consultdown_data2{
     width: 280px ! important;
   }
@@ -1005,7 +1017,84 @@
     top:99em;
   }
 }
-
+@media only screen and (device-width : 412px) and (device-height : 640px) { 
+  #consultdown_data3 {
+    position: absolute;
+    top: 110em;
+  }
+  #consultdown_img3{
+    top:99em;
+  }
+}
+@media only screen and (device-width : 412px) { 
+  #consultdown_data3 {
+    position: absolute;
+    top: 110em;
+  }
+  #consultdown_img3{
+    top:99em;
+  }
+}
+@media only screen and (device-width : 411px) and (device-height : 640px) { 
+  #consultdown_data3 {
+    position: absolute;
+    top: 110em;
+  }
+  #consultdown_img3{
+    top:99em;
+  }
+}
+@media only screen and (device-width : 411px) { 
+  #consultdown_data3 {
+    position: absolute;
+    top: 110em;
+  }
+  #consultdown_img3{
+    top:99em;
+  }
+}
+@media only screen and (device-width : 320px) and (device-height : 640px) { 
+  #consultdown_data3 {
+    position: absolute;
+    top: 110em;
+  }
+  #consultdown_img3{
+    top:99em;
+  }
+}
+@media only screen and (device-width : 320px) { 
+  #consultdown_data3 {
+    position: absolute;
+    top: 110em;
+  }
+  #consultdown_img3{
+    top:99em;
+  }
+  #consultdown_data0{
+    width: 280px ! important;
+  }
+  #consultdown_data1{
+    width: 280px ! important;
+  }
+  #consultdown_data2{
+    width: 280px ! important;
+  }
+  #consultdown_data3{
+    width: 280px ! important;
+  }
+  #consultdown_data4{
+    width: 280px ! important;
+  }
+  #consultdown_data5{
+    width: 280px ! important;
+  }
+  #consultdown_data6{
+    width: 280px ! important;
+  }
+  .new_wizardNotefor4{
+    font-size: 10px ! important;
+  }
+}
 @media only screen and (device-width : 400px) { 
   #consultdown_data3 {
     position: absolute;
