--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -60,6 +60,48 @@
 	}
 
 }
+@media only screen and (device-width : 411px)and (device-height : 640px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
+@media only screen and (device-width : 411px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
+@media only screen and (device-width : 412px)and (device-height : 640px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
+@media only screen and (device-width : 412px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
+@media only screen and (device-width : 320px)and (device-height : 640px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
+@media only screen and (device-width : 320px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
 
 @media only screen and (device-width : 375px) and (device-height : 667px) {
 	.services_img{
