--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -3423,7 +3423,7 @@ div.drop-container:after {
     top: 366px ! important;
   }
   .petrolimage1 {
-    top: 544px ! important;
+    top: 525px ! important;
     right: 414px;
   }
   .plantimage11 {
@@ -3433,7 +3433,28 @@ div.drop-container:after {
 }
 @media only screen and (device-width : 2560px) and (device-height : 1600px) {
   .nexttogasimg_size {
-    width: 310px ! important;
+    width: 370px ! important;
+  }
+    .oilimage_img {
+      width: 370px ! important;
+  }
+  .plantimage11_img{
+     width: 370px ! important;
+  }
+  .petrolimage1_img{
+    width: 370px ! important;
+  }
+  .boat_img2_img{
+    width: 370px ! important;
+  }
+  .waterimg2Div_img{
+    width: 300px ! important;
+  }
+  .boat_img_size{
+    width: 370px ! important;
+  }
+  .waterimg_size{
+    width: 230px ! important;
   }
 }
 
