--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -452,6 +452,9 @@
       left: 128px ! important;
       top: -67px ! important;
     }
+    .Journycaro4{
+      display: none;
+    }
     .add9{
       left:172px ! important;
       top:157px ! important;
