--- a/ui/website/src/allBlocks/Journycaro/Journycaro.css
+++ b/ui/website/src/allBlocks/Journycaro/Journycaro.css
@@ -144,25 +144,25 @@
 }
 @media screen and (min-width: 1900px) {
  .Journycaro1{
-    left:1138px !important;
+    /*left:1138px !important;*/
   }
  /* .add1{
     left:936px ! important;
   }*/
   .Journycaro2{
-    left:874px !important;
+    /*left:874px !important;*/
   }
  /* .add2{
     right: -49px ! important;
   }*/
   .Journycaro3{
-    left:648px !important;
+    /*left:648px !important;*/
   }
  /* .add3{
     left:990px !important;
   }*/
   .Journycaro4{
-    left:1337px ! important;
+    /*left:1337px ! important;*/
   }
  /* .add4{
     left:613px ! important;
@@ -172,18 +172,18 @@
     left:715px ! important;
   }*/
   .Journycaro7{
-    left:1028px ! important;
+    /*left:1028px ! important;*/
   }
   /*.add7{
     top:1238px ! important;
     left:243px ! important;
   }*/
   .Journycaro8{
-    top:1339px ! important;
-    left:1280px ! important;
+    /*top:1339px ! important;
+    left:1280px ! important;*/
   }
    .Journycaro9{
-    left:482px ! important;
+    /*left:482px ! important;*/
   }
   
  /* .add9{
