--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -2819,57 +2819,78 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }
 
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
-  and (orientation: landscape) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
+  and (orientation: portrait) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
    .roadjourny img{
     left:400px ! important;
    }
+    .roadjourny{
+    overflow:inherit;
+   }  
    .Journycaro1{
+    opacity: 1;
     left:483px ! important;
    }
+   .add5{
+    top:675px ! important;
+    opacity: 1;
+   }
    .Journycaro2{
+    opacity: 1;
     left:256px ! important;
    }
    .add2{
+    opacity: 1;
     right: 0px ! important;
    }
    .Journycaro4{
+    opacity: 1;
     left:595px ! important;
     top:698px ! important;
    }
    .Journycaro6{
+    opacity: 1;
     left:162px ! important;
    }
    .Journycaro5{
+    opacity: 1;
     left:604px ! important;
     top:830px ! important;
    }
    .Journycaro7{
+    opacity: 1;
     left:372px ! important;
    }
    .Journycaro8{
+    opacity: 1;
     top: 1329px ! important;
     left: 582px ! important;
    }
    .add9{
+    opacity: 1;
     left:185px ! important;
    }
    .add7{
+    opacity: 1;
     left:596px ! important;
     top:241px ! important;
    }
    .add8{
+    opacity: 1;
     right: -487px ! important;
    }
    .add6{
+    opacity: 1;
     left:85px ! important;
    }
    .Journycaro10{
+    opacity: 1;
     left:303px ! important;
    }
    .Journycaro9{
+    opacity: 1;
     top: 1123px ! important;
    }
   } 
@@ -2885,28 +2906,69 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     and (device-width : 1440px) 
     and (device-height : 900px) { 
     .Journycaro10{
+       opacity: 1;
       left: 480px ! important;
 
       }
       .add9{
+        opacity: 1;
         left:357px !important;
       }
+      .roadjourny{
+    overflow:inherit;
+   }  
       .add10{
+         opacity: 1;
         left:138px ! important;
       }
       .add8{
+         opacity: 1;
         right: -518px ! important;
       }
+      .Journycaro1{
+         opacity: 1;
+       }
+       .Journycaro2{
+         opacity: 1;
+       }
+       .Journycaro3{
+         opacity: 1;
+       }
+       .Journycaro4{
+         opacity: 1;
+       }
       .Journycaro5{
+         opacity: 1;
         left:996px ! important;
       }
       .Journycaro6{
+         opacity: 1;
         left:368px ! important;
       }
       .add6{
+         opacity: 1;
         left:254px ! important;
       }
+      .add7{
+        opacity: 1;
+      }
+      .add5{
+        opacity: 1;
+      }
+      .add4{
+        opacity: 1;
+      }
+      .add3{
+        opacity: 1;
+      }
+      .add2{
+        opacity: 1;
+      }
+      .add1{
+        opacity: 1;
+      }
       .Journycaro4{
+         opacity: 1;
         left:877px ! important;
       }
       .iogimg_4{
@@ -3609,72 +3671,145 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   and (device-width: 2048px) 
   and (device-height:1536px ) 
   and (orientation: landscape){
-      .roadjourny img{
-        left:-28px ! important;
-
-      }
-      .add3{
-        display: none;
-      }
-      .Journycaro1 {
-          left: 1026px !important;
-      }
-      .add2 {
-        right: 77px ! important;
-      }
-      .add4 {
-       left: 500px ! important;
-     }
-     .add6 {
-      left: 682px ! important;
-     }
-     .Journycaro6{
-      text-align: right ! important;
-     }
-     .Journycaro5{
-      left:1467px ! important;
-     }
-     .add5{
-      right: 369px ! important;
-     }
-     .Journycaro7 {
-      left: 905px ! important;
-    }
-    .add8 {
-      right: -745px ! important;
-    }
-    .add11{
-      left:783px ! important;
-      top: -68px;
-      opacity: 1;
-    }
-    .Journycaro10{
-      text-align: right ! important;
-    }
-    .add7 {
-      top: 243px ! important;
-      left: 1000px ! important;
-    }
-    .add1 {
-    left: 841px ! important;
-    top: 277px ! important;
+     .new_wizardNotefor4forJ{
+    right: 63px !important;
   }
-  .new_wizardNotefor4forJ {
-    right: 50px ! important;
-    text-align: center;
-    margin-right: 0px;
-    position: relative;
-    top: 31px;
-    right: -85px;
-    color: #333;
-    font-weight: 500;
-    }
-    .Journycaro10{
-      opacity: 1;
-    }
-     .Journycaro9{
-      opacity: 1;
-    }
+  .roadjourny img{
+    left:-249px ! important;
+  }
+  .add1{
+    opacity: 1;
+    left: 630px ! important;
+  }
+  .Journycaro1{
+    opacity: 1;
+    top:265px ! important;
+   left: 877px ! important;
+  }
+  .Journycaro2{
+    opacity: 1;
+    left: 603px !important;
+    top: 411px ! important;
+  }
+  .Journycaro3 {
+    opacity: 1;
+    left: 346px !important;
+    top: 558px ! important;
+  }
+  .add4{
+    opacity: 1;
+    left: 311px ! important;
+    top: 239px ! important;
+  }
+  
+  .Journycaro3 p{
+    text-align: right ! important;
+  }
+  .Journycaro3 h3{
+    text-align: right ! important;
+  }
+  .Journycaro4 p{
+    text-align: left ! important;
+  }
+  .Journycaro4 h3{
+    text-align: left ! important;
+  }
+  .Journycaro4{
+    opacity: 1;
+     top: 629px ! important;
+    left: 1103px ! important;
+    text-align: right ! important;
+
+  }
+  .add3 {
+    opacity: 1;
+    left: 747px ! important;
+    top: 280px ! important;
+  }
+  .Journycaro6 {
+    opacity: 1;
+    top: 785px ! important;
+   left: 583px ! important;
+  }
+  .add6{
+    opacity: 1;
+    left: 465px ! important;
+    top: -119px ! important;
+  }
+  .Journycaro5{
+    opacity: 1;
+    top: 964px ! important;
+   left: 1309px ! important;
+  }
+  .add5{
+    opacity: 1;
+    top: 763px ! important;
+    right: 520px ! important;
+
+  }
+  .Journycaro7 p{
+    text-align: left ! important; 
+  }
+  .Journycaro7 h3{
+    text-align: left ! important; 
+  }
+   .Journycaro8 p{
+    text-align: right ! important; 
+  }
+  .Journycaro8 h3{
+    text-align: right ! important; 
+  }
+  .Journycaro7{
+    opacity: 1;
+    top: 1119px ! important;
+    left: 1283px ! important;
+  }
+  .add8{
+    opacity: 1;
+    right: -527px ! important;
+    top: 156px ! important;
+  }
+  .add10{
+    opacity: 1;
+    top: -37px ! important;
+    left: 304px ! important;
+  }
+  .Journycaro10{
+    opacity: 1;
+   left: 682px ! important;
+  }
+  .Journycaro8 {
+    opacity: 1;
+    top: 1086px ! important;
+    left: 437px ! important;
+
+
+  }
+  .Journycaro9{
+    opacity: 1;
+    left: 210px ! important;
+    top: 1268px ! important;
+  }
+  .add7 {
+    opacity: 1;
+    left: 622px ! important;
+    top: 348px ! important;
+  }
+  .add12 {
+    left: 562px ! important;
+    top: -112px  !important;
+    opacity: 1;
+     
+   }
+   .add2{
+    opacity:1;
+    right: 311px ! important;
+   }
+   .roadjourny{
+    overflow:inherit;
+   }  
+  
+
 }
  @media only screen and (device-width : 2560px) and (device-height : 1600px) {
   .new_wizardNotefor4forJ{
@@ -3684,72 +3819,95 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     left:-249px ! important;
   }
   .add1{
+    opacity: 1;
     left:957px ! important;
   }
   .Journycaro1{
+    opacity: 1;
     top:265px ! important;
-    left:!173px ! important;
+    left:1393px ! important;
   }
   .Journycaro2{
-    left: 1039px !important;
+    opacity: 1;
+    left: 1107px !important;
     top: 411px ! important;
   }
   .Journycaro3 {
-    left: 587px !important;
+    opacity: 1;
+    left: 608px !important;
     top: 613px ! important;
   }
   .add4{
+    opacity: 1;
     left:646px ! important;
     top: 239px ! important;
   }
-  .Journycaro3 {
-    left: 1587px !important;
-  }
+  
   .Journycaro3 p{
-    text-align: left ! important;
+    text-align: right ! important;
   }
   .Journycaro3 h3{
-    text-align: left ! important;
+    text-align: right ! important;
   }
   .Journycaro4 p{
-    text-align: right ! important;
+    text-align: left ! important;
   }
   .Journycaro4 h3{
-    text-align: right ! important;
+    text-align: left ! important;
   }
   .Journycaro4{
+    opacity: 1;
     top: 543px ! important;
-    left: 642px ! important;
+    left: 1586px ! important;
     text-align: right ! important;
 
   }
   .add3 {
+    opacity: 1;
    left: 1061px ! important;
     top: 280px ! important;
   }
   .Journycaro6 {
+    opacity: 1;
     top: 785px ! important;
-    left: 1110px ! important;
+    left: 1230px ! important;
   }
   .add6{
+    opacity: 1;
     left: 1169px  ! important;
     top: 12px ! important;
   }
   .Journycaro5{
+    opacity: 1;
     top: 964px ! important;
     left: 1799px ! important;
   }
   .add5{
+    opacity: 1;
     top: 763px ! important;
     right: 429px ! important;
   }
+  .Journycaro7 p{
+    text-align: left ! important; 
+  }
+  .Journycaro7 h3{
+    text-align: left ! important; 
+  }
+   .Journycaro8 p{
+    text-align: right ! important; 
+  }
+  .Journycaro8 h3{
+    text-align: right ! important; 
+  }
   .Journycaro7{
+    opacity: 1;
         top: 1119px ! important;
-        left: 1248px ! important;
+       left: 1814px ! important;
   }
   .add8{
-    right: -794px ! important;
-    top: 237px ! important;
+    opacity: 1;
+   right: -860px ! important;
+    top: 156px ! important;
   }
   .add10{
     opacity: 1;
@@ -3759,15 +3917,18 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     left: 1180px ! important;
   }
   .Journycaro8 {
-    top: 1313px ! important;
-      left: 1380px ! important;
+    opacity: 1;
+        top: 1086px ! important;
+       left: 1042px ! important;
+
   }
   .Journycaro9{
     opacity: 1;
-     left: 700px ! important;
+     left: 686px ! important;
      top: 1268px ! important;
   }
   .add7 {
+    opacity: 1;
     left: 1125px ! important;
     top: 348px ! important;
   }
@@ -3776,6 +3937,12 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     top: -112px  !important;
     opacity: 1;
      
+   }
+   .add2{
+    opacity:1;
+   }
+   .roadjourny{
+    overflow:inherit;
    }  
   
    
@@ -3935,5 +4102,18 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
 
 
  }
+ @media only screen 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .Journycaro4{
+      display: none;
+
+    }
+    .add3{
+      display: none;
+    }
+  }
 
 
