--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -3510,6 +3510,160 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }
 }
 @media only screen 
+  and (device-width: 1680px) 
+  and (device-height: 1050px) 
+ {
+      .roadjourny img{
+    left:-249px ! important;
+  }
+  .add1{
+    opacity: 1;
+    left: 387px ! important;
+  }
+  .add9{
+    display: none;
+  }
+  .Journycaro1{
+    opacity: 1;
+    top:265px ! important;
+    left: 552px ! important;
+  }
+  .Journycaro2{
+    opacity: 1;
+    left: 248px !important;
+    top: 411px ! important;
+  }
+  .Journycaro3 {
+    opacity: 1;
+    left: 700px !important;
+    top: 591px ! important;
+  }
+  .add4{
+    opacity: 1;
+   left: -476px ! important;
+    top: 461px ! important;
+  }
+  
+  .Journycaro3 p{
+    text-align: left ! important;
+  }
+  .Journycaro3 h3{
+    text-align: left ! important;
+  }
+  .Journycaro4 p{
+    text-align: left ! important;
+  }
+  .Journycaro4 h3{
+    text-align: left ! important;
+  }
+  .Journycaro4{
+    opacity: 1;
+    top: 761px ! important;
+    left: 200px ! important;
+    text-align: right ! important;
+
+  }
+  .add3 {
+    opacity: 1;
+    left: 603px ! important;
+    top: 280px ! important;
+  }
+  .Journycaro6 {
+    opacity: 1;
+    top: 810px ! important;
+    left: 746px ! important;
+  }
+  .add6{
+    opacity: 1;
+    left: 696px ! important;
+    top: 14px ! important;
+
+  }
+  .Journycaro5{
+    opacity: 1;
+    top: 964px ! important;
+   left: 934px ! important;
+  }
+  .add5{
+    opacity: 1;
+    top: 763px ! important;
+    right: 582px ! important;
+
+  }
+  .Journycaro7 p{
+    text-align: left ! important; 
+  }
+  .Journycaro7 h3{
+    text-align: left ! important; 
+  }
+   .Journycaro8 p{
+    text-align: right ! important; 
+  }
+  .Journycaro8 h3{
+    text-align: right ! important; 
+  }
+  .Journycaro7{
+    opacity: 1;
+    top: 1119px ! important;
+    left: 939px ! important;
+  }
+  .add8{
+    opacity: 1;
+    right: -271px ! important;
+    top: 156px ! important;
+  }
+  .add10{
+    opacity: 1;
+    top: -37px ! important;
+    left: 304px ! important;
+  }
+  .Journycaro10{
+    opacity: 1;
+        left: 279px ! important;
+  }
+  .Journycaro8 {
+    opacity: 1;
+        top: 1125px ! important;
+    left: 282px ! important;
+
+
+  }
+  .Journycaro9{
+    opacity: 1;
+    left: 421px ! important;
+    top: 1308px ! important;
+  }
+  .Journycaro9 p{
+    text-align: left ! important;
+  }
+  .Journycaro9 h3{
+    text-align: left ! important;
+  }
+
+  .add7 {
+    opacity: 1;
+    left: 246px ! important;
+    top: 348px ! important;
+  }
+  .add12 {
+    left: 189px ! important;
+    top: -112px  !important;
+    opacity: 1;
+     
+   }
+   .add2{
+    opacity:1;
+    right: 431px ! important;
+   }
+   .roadjourny{
+    overflow:inherit;
+   }  
+  
+
+
+    
+  }   
+@media only screen 
   and (device-width: 1536px) 
   and (device-height: 2048px) 
   and (orientation: portrait){
@@ -4115,5 +4269,86 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
       display: none;
     }
   }
+   @media only screen and (device-width : 1280px) and (device-height : 800px) {
+    .roadjourny{
+      overflow: inherit;
+    }
+    .Journycaro1{
+      left:532px ! important;
+      opacity: 1;
+    }
+    .add1{
+      left:533px ! important;
+      opacity: 1;
+    }
+    .Journycaro2{
+      left:280px ! important;
+      opacity: 1;
+    }
+    .Journycaro3{
+      opacity: 1;
+    }
+    .Journycaro4{
+      top:627px! important;
+      opacity: 1;
+    }
+    .Journycaro5{
+      left:846px ! important;
+      opacity: 1;
+    }
+    .add5{
+      opacity: 1;
+    }
+    .Journycaro7{
+      left:423px ! important;
+      opacity: 1;
+    }
+    .add8{
+      right: -412px ! important;
+      opacity: 1;
+    }
+    .Journycaro8{
+      left:760px ! important;
+      opacity: 1;
+    }
+    .add7{
+      left: 712px ! important;
+      top:241px ! important;
+      opacity: 1;
+    }
+    .add6{
+      left: 95px ! important;
+      opacity: 1;
+    }
+    .Journycaro9{
+      top:1149px ! important;
+      opacity: 1;
+    }
+    .Journycaro10{
+      left: 313px ! important;
+      opacity: 1;
+    }
+    .add9{
+      left:196px ! important;
+      opacity: 1;
+    }
+    .Journycaro6{
+      left:204px ! important;
+      opacity: 1;
+    }
+    .add2{
+      opacity: 1;
+    }
+    .add4 {
+      opacity: 1;
+      position: relative;
+      left: 208px;
+    }
+    .add3 {
+    left: 588px;
+    opacity: 1;
+    top: 271px;
+  }
+}
 
 
