--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -1201,6 +1201,21 @@
   }
 }
 @media only screen 
+  and (device-width: 1280px) 
+  and (device-height: 800px) {
+    #consultdown_img5{
+      left:46em ! important;
+    }
+    #consultdown_img3{
+      left:46em ! important;
+    }
+    #consultdown_img1{
+      left:46em ! important;
+    }
+
+  }
+
+@media only screen 
   and (device-width: 1536px) 
   and (device-height: 2048px) 
   and (orientation: portrait){
@@ -1459,6 +1474,55 @@
         left: 38em !important;
     }
   }
+
+  @media only screen 
+  and (device-width: 1680px) 
+  and (device-height: 1050px) 
+ {
+  .downimgtext {
+    left: 25em !important;
+  }
+  #consultdown_data0 {
+    right: 7% ! important;
+    width: 700px ! important;
+  }
+  #consultdown_data2 {
+    right: 7% ! important;
+    width: 700px ! important;
+  }
+  #consultdown_data4 {
+    right: 7% ! important;
+    width: 700px ! important;
+  }
+  #consultdown_data6 {
+    right: 7% ! important;
+    width: 700px ! important;
+  }
+  #consultdown_img1 {
+    left: 61em ! important;
+  }
+   #consultdown_img3 {
+    left: 61em ! important;
+  }
+   #consultdown_img5 {
+    left: 61em ! important;
+  }
+  #consultdown_data1 {
+    left: 6% ! important;
+    width: 700px ! important;
+  }
+   #consultdown_data3 {
+    left: 6% ! important;
+    width: 700px ! important;
+  }
+   #consultdown_data5 {
+    left: 6% ! important;
+    width: 700px ! important;
+  }
+  .blogtext h4{
+    height: 72px ! important
+  }
+ }
 
 
  
